# MeowNocode

./: .cnb.yml  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  ELECTRON_DESKTOP.md  README.md  d1-migration.sql  docker-compose.yml  docker-entrypoint.sh  index.html  package.json
.github/workflows/: cnb.yml
functions/api/: memos.js
mind-map/: README.md  repomix-output-y-shi23-mind-map.md
public/: electron.js  preload.js
server/: config.js  database.js  index.js
src/: App.jsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CanvasEditor.jsx  CanvasMode.jsx  ContentRenderer.jsx  DesktopConfigCheck.jsx  DesktopTitleBar.jsx  Header.jsx  MainContent.jsx  MemoEditor.jsx  MemoList.jsx  MiniMusicPlayer.jsx  MusicModal.jsx  S3ConfigPanel.jsx  SettingsCard.jsx  TitleBar.jsx  UserAvatar.jsx
src/config/: desktop.js
src/context/: SettingsContext.jsx
src/lib/: d1.js  s3Storage.js  stickyMemoWindow.js  utils.js
src/pages/: Index.jsx  StickyMemoWindow.jsx
