[package]
name = "meownocode"
version = "0.1.0"
description = "Meow App desktop shell"
authors = ["MeowNocode Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
config = "tauri.conf.json"
