[package]
name = "meownocode"
version = "0.1.0"
description = "Meow App desktop shell"
authors = ["MeowNocode Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "system-tray", "window-start-dragging", "window-set-position", "window-create", "window-set-focus", "window-set-decorations", "window-close", "window-set-always-on-top", "window-minimize", "window-maximize", "window-unmaximize"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
config = "tauri.conf.json"
